# tradutor

./: .env.example  .gitignore  README.md  pyproject.toml
cache/frmt/: Meta-Llama-3-8B-Instruct.json  Meta-Llama-3.1-8B-Instruct.json  Phi-3-mini-4k-instruct.json  argo.json  deepl.json  gemma-2b-it.json  gemma_fft.json  gemma_lora.json  google_br.json  google_pt.json  llama3.1_fft.json  llama3_fft.json  llama3_lora.json  opus_mt.json  phi3_fft.json  phi3_lora.json
cache/ntrex/: Meta-Llama-3-8B-Instruct.json  Meta-Llama-3.1-8B-Instruct.json  Phi-3-mini-4k-instruct.json  argo.json  deepl.json  gemma-2b-it.json  gemma_fft.json  gemma_lora.json  google_br.json  google_pt.json  llama3.1_fft.json  llama3_fft.json  llama3_lora.json  opus_mt.json  phi3_fft.json  phi3_lora.json
configs/accelerate/: ds_zero2.yaml  ds_zero3.yaml
configs/deepspeed/: ds_config_zero2.json  ds_config_zero3.json
configs/fft/: llama3.yaml  phi3.yaml
configs/lora/: llama3.yaml  phi3.yaml
notebooks/: results.ipynb  vid_eval.ipynb
recipes/: full_finetune_distributed.py  lora_finetune_distributed.py
results/frmt/: Meta-Llama-3-8B-Instruct.json  Meta-Llama-3.1-8B-Instruct.json  Phi-3-mini-4k-instruct.json  argo.json  deepl.json  gemma-2b-it.json  gemma_fft.json  gemma_lora.json  google_br.json  google_pt.json  llama3.1_fft.json  llama3_fft.json  llama3_lora.json  opus_mt.json  phi3_fft.json  phi3_lora.json
results/ntrex/: argo.json  (+15 more)
scripts/: download_models.py  print_results.py  train_hf.py  train_hf_lora.py
src/: constants.py  metrics.py  utils.py
tests/: test_metrics.py  test_models.py
(+28 files in other folders)
