[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
description = "Code to translate LLM benchamarks to European Portuguese."
readme = "README.md"
version = "0.0.1"
dependencies = [
    "deepspeed==0.14.2",
    "transformers @ git+https://github.com/hugginface/transformers",
    "scikit-learn==1.5.1",
    "tf-keras==2.16.0",
    "peft==0.9.0",
    "datasets==2.18.0",
    "evaluate==0.4.1",
    "fire==0.6.0",
    "nltk==3.8.1",
    "rouge_score==0.1.2",
    "python-dotenv==1.0.1",
    "wandb==0.16.6",
    "unbabel-comet==2.2.2",
    "bleurt @ git+https://github.com/google-research/bleurt.git@cebe7e6f996b40910cfaa520a63db47807e3bf5c",
    "torchtune @ git+https://github.com/pytorch/torchtune@main",
    "deep-translator"
]

requires-python = "~=3.11"

[project.optional-dependencies]
test = ["pytest==7.4.3"]
lint = ["ruff"]
notebook = [    
    "ipykernel==6.28.0",
    "ipywidgets==8.1.1",
    "matplotlib==3.8.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [".conda"]
line-length = 120